--- a/wp-content/themes/understrap-child/sass/theme/partials/_justification_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_justification_styles.scss
@@ -16,7 +16,7 @@ margin-left: 0;
 }
 .header-25x75row__container{
   width: 100%;
-  max-width: 100%;
+max-width: 100%
 }
 
 .header-25x75row__row1--jumbo-digit{
