--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -1462,7 +1462,7 @@ ul.strengths__list_container {
   }
 
   @include mq("desktop"){
-      hieght: 133%;
+      height: 133%;
 }
 }
 svg#services__arrow--img {
