--- a/wp-content/themes/understrap-child/sass/theme/partials/redux_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/redux_layout_styles.scss
@@ -1808,6 +1808,7 @@ p.homepage-summary__claim--fancy {
 }
 
 .container.commitment__article_container {
+ background: $offwhite;
   @include mq("desktop") {
     width: 61%;
     max-width: 61%;
